trustfall_core/test_data/tests/parse_errors/tag_name_with_multiple_invalid_chars.parse-error.ron
Err(InvalidTagName("name with-various $%^&# chars!", [
  ' ',
  '-',
  '$',
  '%',
  '^',
  '&',
  '#',
  '!',
], Pos(
  line: 4,
  column: 25,
)))
